pep8に対応した。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    "python.linting.pylintEnabled": true,
+    "python.linting.pylintEnabled": false,
     "python.linting.pylintArgs": [
         "--load-plugins=pylint_django"
     ],
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "python.linting.pep8Enabled": true,
+    "python.linting.enabled": true
 }
